--- a/index.html
+++ b/index.html
@@ -8,5 +8,12 @@
 <body>
     <h1>Lorem ipsum dolor sit amet.</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt eveniet nobis eligendi sint maiores corrupti a molestias possimus inventore officiis.</p>
+
+    <h3>Lorem, ipsum dolor.</h3>
+    <ul>
+        <li>Home</li>
+        <li>About</li>
+        <li>Contact</li>
+    </ul>
 </body>
 </html>
